# bn-subviews

./: CMakeLists.txt  Plugin.cpp  Plugin.h
UI/: BWindow.h  DockableSidebar.cpp  FramableSidebar.cpp  FramableSidebar.h  Notifications.cpp  Notifications.h  qmainwindow.md  resolve_parents.py  subview.cpp  subview.h
